--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
       - name: Cypress.io
         uses: cypress-io/github-action@v5.1.0
         with:
-          start: npx cypress open
+          start: npm run serve
       
